# easi

./: .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  easi.imp
.github/workflows/: test.yml
cmake/: easiConfig.cmake.in
doc/: builders.rst  compiling_dependencies.rst  components.rst  conf.py  filters.rst  getting_started.rst  glossary.rst  index.rst  maps.rst  python_bindings.rst
easi/: Component.h  Query.h  ResultAdapter.h  YAMLParser.h
easi/component/: AffineMap.h  Composite.h  ConstantModel.h  DomainFilter.h  FunctionModel.h  IdentityMap.h  LayeredModelBuilder.h  Model.h  PolynomialModel.h  Switch.h
easi/parser/: YAMLAbstractParser.h  YAMLComponentParsers.h  YAMLHelpers.h
examples/: 0_constant.yaml  101_asagi.yaml  101_asagi_nearest.yaml  120_initial_stress.yaml  120_sumatra.yaml  1_groups.yaml  26_function.yaml  26_initial_stress.yaml  2_prem.yaml  33_layered_constant.yaml  3_layered_linear.yaml  4_lua.yaml  5_function.yaml  62_landers.yaml  6_lua.yaml  7_gassmann.yaml  7_poroelastic.yaml  asagi_example.nc  f_103_scec.yaml  f_120_sumatra.yaml  f_16_scec.yaml  f_26_function.yaml  integralToLayeredModel.py  scec_example.txt  supplied_parameters.yaml
include/easi/: Component.h  Query.h  ResultAdapter.h  YAMLParser.h
include/easi/component/: ASAGI.h  AffineMap.h  AndersonianStress.h  Any.h  Composite.h  ConstantMap.h  DomainFilter.h  EvalModel.h  Filter.h  FunctionMap.h  FunctionModel.h  Grid.h  GroupFilter.h  LayeredModelBuilder.h  LuaMap.h  Map.h  OptimalStress.h  OptimalStress_Szz.h  PolynomialMap.h  SCECFile.h  Special.h  SpecialMap.h  Switch.h
include/easi/parser/: YAMLAbstractParser.h  YAMLComponentParsers.h  YAMLComponentParsers.inl  YAMLHelpers.h
include/easi/util/: AsagiReader.h  FunctionWrapper.h  ImpalaHandler.h  Magic.h  MagicStruct.h  Matrix.h  Print.h  RegularGrid.h  Slice.h  Vector.h
python_bindings/: CMakeLists.txt  README.md  easi_wrapper.cpp
src/: Query.cpp  YAMLParser.cpp  sources.cmake
src/component/: ASAGI.cpp  AffineMap.cpp  AndersonianStress.cpp  Composite.cpp  ConstantMap.cpp  DomainFilter.cpp  EvalModel.cpp  FunctionMap.cpp  LayeredModelBuilder.cpp  LuaMap.cpp  OptimalStress.cpp  PolynomialMap.cpp  SCECFile.cpp  Special.cpp  Switch.cpp
src/parser/: YAMLComponentParsers.cpp  YAMLHelpers.cpp
src/util/: AsagiReader.cpp  FunctionWrapper.cpp  ImpalaHandler.cpp  RegularGrid.cpp
tests/: 0_constant.cpp  101_asagi.cpp  101_asagi_nearest.cpp  1_groups.cpp  26_function.cpp  2_prem.cpp  33_layered_constant.cpp  3_layered_linear.cpp  4_lua.cpp  5_function.cpp  6_lua.cpp  easitest.cpp  easitest.h  f_120_sumatra.cpp  f_16_scec.cpp  special.f90  supplied_parameters.cpp
tools/: benchmark.py  easicube.cpp
